creaces new tasks for min html and min js, add swap for fonts, fixes bugs

--- a/source/sass/base/fonts.scss
+++ b/source/sass/base/fonts.scss
@@ -5,6 +5,7 @@
     url("../../fonts/opensans.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -14,4 +15,5 @@
     url("../../fonts/opensansbold.woff2") format("woff2");
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
