--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -21,7 +21,7 @@
   color: #ffffff;
 
   @media (min-width: $tablet-width) {
-    display: block;
+    display: flex;
     position: absolute;
     bottom: 0;
     left: 50%;
