--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -399,7 +399,7 @@
   color: #ffffff;
 
   @media (min-width: $tablet-width) {
-    display: block;
+    display: flex;
     position: absolute;
     bottom: 0;
     left: 50%;
