--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -23,6 +23,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     position: absolute;
+    align-content: center;
     bottom: 0;
     left: 50%;
     width: 100%;
