--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -75,6 +75,7 @@
     @media (min-width: $desktop-width) {
       width: 316px;
     }
+
     margin-bottom: 30px;
   }
 
@@ -419,4 +420,15 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: all 0.4s ease;
+
+  &:hover {
+    transform: translate(-50%, -50%) scale(1.2);
+  }
+
+  &:active {
+    transform: translate(-50%, -50%) scale(0.8);
+
+    @include active-opacity;
+  }
 }
