--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -27,6 +27,10 @@
   margin: 0 auto;
   padding-bottom: 22px;
 
+  &:active {
+    @include active-opacity;
+  }
+
   @media (min-width: $tablet-width) {
     align-self: center;
     font-size: 19px;
@@ -45,6 +49,14 @@
 
 .footer__logo {
   display: none;
+
+  &:hover {
+    color: $color-brand;
+  }
+
+  &:active {
+    @include active-opacity;
+  }
 
   @media (min-width: $tablet-width) {
     display: block;
